# TouchTyper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TouchTyper.data  TouchTyper.js  TouchTyper.wasm  index.html
.github/workflows/: nativebuild.yml  webbuild.yml
assets/word_lists/: english_10k.txt  english_1k.txt  english_25k.txt  english_5k.txt  english_misspelled.txt
src/: Context.cpp  Context.hpp  Theme.hpp  constants.hpp  footer.cpp  footer.hpp  header.cpp  header.hpp  helpers.cpp  helpers.hpp  main.cpp  result.cpp  result.hpp  typingTest.cpp  typingTest.hpp
